<resources>
    <string name="app_name">RPG Soundboard</string>
    <string name="title_player">Player</string>
    <string name="title_library">Library</string>
    <string name="title_settings">Settings</string>
    <string name="action_title_items_selected">%d selected</string>

    <string name="dialog_title_new_preset">Create new preset</string>
    <string name="dialog_title_delete_presets">Delete presets?</string>
    <string name="dialog_message_delete_presets">This presets will be permanently deleted. Note that no playlists included in this presets will be affected and they will still be available later.</string>
    <string name="dialog_title_rename_preset">Rename preset</string>
    <string name="dialog_title_new_playlist">Create new playlist</string>
    <string name="dialog_title_add_playlists">Add playlists</string>
    <string name="dialog_title_remove_playlists">Remove playlists?</string>
    <string name="dialog_message_remove_playlists">This playlists will be removed from this preset. Note that they won\'t be removed from any other presets and they will still be available to add later.</string>
    <string name="dialog_title_delete_playlists">Delete playlists permanently?</string>
    <string name="dialog_message_delete_playlists">This playlists will be permanently deleted from this and all other presets. Note that no songs will be affected. THIS ACTION IS IRREVERSIBLE!</string>
    <string name="dialog_title_add_songs">Add songs</string>

    <string name="tab_from_saved">Saved</string>
    <string name="tab_from_device">Device</string>
    <string name="tab_from_spotify">Spotify</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_manage">Manage</string>

    <string name="action_open_explorer">Open file explorer</string>
    <string name="action_create_playlist">Create playlist</string>

    <string name="hint_name">Name</string>

    <string name="placeholder_fallback_message">There is nothing to show here</string>
    <string name="placeholder_timeout_message">Something went wrong, try again</string>
    <string name="placeholder_error_message">Oops, something went wrong</string>
    <string name="db_exception">Database error occurred</string>
    <string name="file_explorer_song_exception">An error occurred when fetching %d of selected songs</string>

    <string name="default_shared_preferences" translatable="false">com.gmail.dev.wasacz.rpgsoundboard.defSharedPrefs</string>
    <string name="content_desc_fab" translatable="false">Main Action</string>

    <string name="nav_arg_show_fab" translatable="false">showFAB</string>
    <string name="nav_arg_preset_id" translatable="false">presetId</string>
    <string name="nav_arg_delete_presets_result" translatable="false">deletePresetsResult</string>
    <string name="nav_arg_playlist_item" translatable="false">playlistItem</string>
    <string name="nav_arg_rename_preset_result" translatable="false">renamePresetResult</string>
    <string name="nav_arg_remove_playlists_result" translatable="false">removePlaylistsResult</string>
    <string name="nav_arg_delete_playlists_result" translatable="false">deletePlaylistsResult</string>

    <string name="transition_name_fab" translatable="false">TransNameFAB</string>
    <string name="transition_name_preset" translatable="false">TransNamePreset %d</string>
    <string name="transition_name_playlist" translatable="false">TransNamePlaylist %d</string>
</resources>