<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:transitionName="@string/transition_name_fab">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="@dimen/dialog_menu_text_spacing"
                android:theme="@style/Theme.RPGSoundboard.TextMenuItemToolbar"
                app:navigationIcon="@drawable/ic_close_24dp"
                app:title="@string/dialog_title_add_songs"
                tools:ignore="RtlSymmetry"
                tools:menu="@menu/dialog_add_items_menu" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:tabRippleColor="@null">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_library_24dp"
                    android:text="@string/tab_from_saved" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_folder_24dp"
                    android:text="@string/tab_from_device" />

                <!--TODO Spotify tab -->
                <!--<com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_spotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_from_spotify" />-->

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>